<resources>
    <string name="app_name">TicTacToe</string>
    <string name="zero" translatable="false">0</string>
    <string name="restart" translatable="false">RESTART</string>
    <string name="new_game" translatable="false">NEW GAME</string>
    <string name="tic_tac_toe" translatable="false">Tic-Tac-Toe</string>
    <string name="_2_player" translatable="false">2 Player</string>
    <string name="play_against_ai" translatable="false">Play Against AI</string>
    <string name="play_online" translatable="false">Play online</string>
    <string name="tictactoe" translatable="false">TicTacToe</string>


</resources>