<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F45F4F"
    tools:context=".SelectionActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="164dp"
        android:fontFamily="@font/jingle_star"
        android:text="TicTacToe"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toTopOf="@+id/players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/jingle_star"
        android:text="Choose your game mode!"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toTopOf="@+id/players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/players"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="0dp"
        android:backgroundTint="#FDEF82"
        android:fontFamily="@font/jingle_star"
        android:text="@string/_2_player"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/against_ai"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#FDEF82"
        android:fontFamily="@font/jingle_star"
        android:text="@string/play_against_ai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/online_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#FDEF82"
        android:fontFamily="@font/jingle_star"
        android:text="@string/play_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/against_ai" />
</androidx.constraintlayout.widget.ConstraintLayout>